--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
     height: 99.6%;
     width: 99.6%;
-    background: #1a1a1a;
+    background: #1f1f1f;
     background-size: cover;
     color: #ccc;
     padding: 0;
